# DebianAnalytics

./: .gitignore  Analytics.cabal  Analyze.hs  Benchmark.hs  Color.hs  DebianAnalytics.cabal  DownloadHours.hs  Filter.hs  Histogram.hs  Parse.hs  README.md  Status.hs  Stem.hs  default.nix
.github/workflows/: haskell.yml
