name:               Analytics
version:            0.1.0.0
synopsis:           Analyze apache log files from a Debian repo
description:        This package implements tools and utilities for analyzing Apache log files,
                    particularly those from Debian package repositories
license:            GPL-3
license-file:       LICENSE
author:             Neil Mayhew
maintainer:         neil_mayhew@sil.org
copyright:          2013 SIL International
category:           Utility
build-type:         Simple
cabal-version:      >=1.10

executable Analyze
  main-is:             Analyze.hs
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, StandaloneDeriving
  build-depends:       base >=4.6 && <4.7, attoparsec >=0.10 && <0.11, bytestring >=0.10 && <0.11,
                       HTTP >=4000.2 && <4000.3, network >=2.4 && <2.5, hashable >=1.2 && <1.3,
                       filepath >=1.3 && <1.4, unordered-containers >=0.2 && <0.3,
                       blaze-html >= 0.6 && < 0.8

executable Filter
  main-is:             Filter.hs
  default-language:    Haskell2010
  other-extensions:    StandaloneDeriving
  build-depends:       base >=4.6 && <4.7, attoparsec >=0.10 && <0.11, bytestring >=0.10 && <0.11,
                       HTTP >=4000.2 && <4000.3, network >=2.4 && <2.5,
                       MissingH

executable Status
  main-is:             Status.hs
  default-language:    Haskell2010
  other-extensions:    StandaloneDeriving
  build-depends:       base >=4.6 && <4.7, attoparsec >=0.10 && <0.11, bytestring >=0.10 && <0.11,
                       HTTP >=4000.2 && <4000.3, network >=2.4 && <2.5,
                       MissingH
