name: Analytics
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: 2013 SIL International
maintainer: neil_mayhew@sil.org
synopsis: Analyze apache log files from a Debian repo
description:
    This package implements tools and utilities for analyzing Apache log files,
    particularly those from Debian package repositories
category: Utility
author: Neil Mayhew

executable Analyze
    main-is: Analyze.hs
    build-depends:
        base >=4.6 && <4.9,
        attoparsec >=0.10 && <0.14,
        bytestring >=0.10 && <0.11,
        HTTP >=4000.2 && <4000.4,
        network >=2.4 && <2.7,
        hashable >=1.2 && <1.3,
        filepath >=1.3 && <1.5,
        unordered-containers >=0.2 && <0.3,
        blaze-html >=0.6 && <0.9
    default-language: Haskell2010
    other-extensions: OverloadedStrings StandaloneDeriving

executable Filter
    main-is: Filter.hs
    build-depends:
        base >=4.6 && <4.9,
        attoparsec >=0.10 && <0.14,
        bytestring >=0.10 && <0.11,
        HTTP >=4000.2 && <4000.4,
        network >=2.4 && <2.7,
        MissingH <1.4
    default-language: Haskell2010
    other-extensions: StandaloneDeriving

executable Status
    main-is: Status.hs
    build-depends:
        base >=4.6 && <4.9,
        attoparsec >=0.10 && <0.14,
        bytestring >=0.10 && <0.11,
        HTTP >=4000.2 && <4000.4,
        network >=2.4 && <2.7,
        MissingH <1.4
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
