name: DebianAnalytics
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: 2013 SIL International
maintainer: neil_mayhew@sil.org
synopsis: Analyze apache log files from a Debian repo
description:
    This package implements tools and utilities for analyzing Apache log files,
    particularly those from Debian package repositories
category: Utility
author: Neil Mayhew

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

executable Analyze
    main-is: Analyze.hs
    build-depends:
        base >=4.6 && <4.10,
        attoparsec >=0.10 && <0.14,
        bytestring >=0.10 && <0.11,
        debian >=3.61 && <3.92,
        HTTP >=4000.2 && <4000.4,
        iproute >=1.5 && <1.8,
        hashable >=1.2 && <1.3,
        filepath >=1.3 && <1.5,
        unordered-containers >=0.2 && <0.3,
        blaze-html >=0.6 && <0.9,
        HUnit >=1.2 && <1.6,
        time >=1.4 && <1.7,
        time-locale-compat
    if flag(network-uri)
      build-depends:
        network-uri >=2.5 && <2.7, network >=2.5 && <2.7
    else
      build-depends:
        network < 2.5
    default-language: Haskell2010
    other-extensions: OverloadedStrings StandaloneDeriving
    ghc-options: -Wall

executable Filter
    main-is: Filter.hs
    build-depends:
        base >=4.6 && <4.10,
        attoparsec >=0.10 && <0.14,
        bytestring >=0.10 && <0.11,
        HTTP >=4000.2 && <4000.4,
        iproute >=1.5 && <1.8,
        MissingH <1.6,
        time >=1.4 && <1.7,
        time-locale-compat
    if flag(network-uri)
      build-depends:
        network-uri >=2.5 && <2.7, network >=2.5 && <2.7
    else
      build-depends:
        network < 2.5
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall

executable Status
    main-is: Status.hs
    build-depends:
        base >=4.6 && <4.10,
        attoparsec >=0.10 && <0.14,
        bytestring >=0.10 && <0.11,
        HTTP >=4000.2 && <4000.4,
        iproute >=1.5 && <1.8,
        MissingH <1.6,
        time >=1.4 && <1.7,
        time-locale-compat
    if flag(network-uri)
      build-depends:
        network-uri >=2.5 && <2.7, network >=2.5 && <2.7
    else
      build-depends:
        network < 2.5
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall

executable Stem
    main-is: Stem.hs
    build-depends:
        base >=4.6 && <4.10,
        attoparsec >=0.10 && <0.14,
        bytestring >=0.10 && <0.11,
        containers >= 0.1 && <0.6,
        HTTP >=4000.2 && <4000.4,
        iproute >=1.5 && <1.8,
        MissingH <1.6,
        time >=1.4 && <1.7,
        time-locale-compat
    if flag(network-uri)
      build-depends:
        network-uri >=2.5 && <2.7, network >=2.5 && <2.7
    else
      build-depends:
        network < 2.5
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall

executable DownloadHours
    main-is: DownloadHours.hs
    build-depends:
        base >=4.6 && <4.10,
        attoparsec >=0.10 && <0.14,
        bytestring >=0.10 && <0.11,
        containers >= 0.1 && <0.6,
        HTTP >=4000.2 && <4000.4,
        iproute >=1.5 && <1.8,
        MissingH <1.6,
        time >=1.4 && <1.7,
        time-locale-compat
    if flag(network-uri)
      build-depends:
        network-uri >=2.5 && <2.7, network >=2.5 && <2.7
    else
      build-depends:
        network < 2.5
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall
