name: DebianAnalytics
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: 2013 SIL International
maintainer: neil_mayhew@sil.org
synopsis: Analyze apache log files from a Debian repo
description:
    This package implements tools and utilities for analyzing Apache log files,
    particularly those from Debian package repositories
category: Utility
author: Neil Mayhew

flag network-uri
    description:
        Get Network.URI from the network-uri package

executable Analyze
    if flag(network-uri)
        build-depends:
            network-uri >=2.5 && <2.7,
            network >=2.5 && <3.2
    else
        build-depends:
            network <2.5
    main-is: Analyze.hs
    other-modules: Parse Color
    build-depends:
        base >=4.9 && <4.20,
        attoparsec >=0.10 && <0.15,
        bytestring >=0.10 && <0.13,
        debian >=3.61 && <4.1,
        deepseq -any,
        HTTP >=4000.2 && <4000.5,
        iproute >=1.5 && <1.8,
        hashable >=1.2 && <1.5,
        filepath >=1.3 && <1.5,
        unordered-containers >=0.2 && <0.3,
        blaze-html >=0.6 && <0.10,
        HUnit >=1.2 && <1.7,
        time >=1.4 && <1.13,
        time-locale-compat -any
    default-language: Haskell2010
    other-extensions: OverloadedStrings StandaloneDeriving
    ghc-options: -Wall -Wno-unused-imports

executable Filter
    if flag(network-uri)
        build-depends:
            network-uri >=2.5 && <2.7,
            network >=2.5 && <3.2
    else
        build-depends:
            network <2.5
    main-is: Filter.hs
    other-modules: Parse
    build-depends:
        base >=4.9 && <4.20,
        attoparsec >=0.10 && <0.15,
        bytestring >=0.10 && <0.13,
        deepseq -any,
        HTTP >=4000.2 && <4000.5,
        iproute >=1.5 && <1.8,
        MissingH <1.7,
        time >=1.4 && <1.13,
        time-locale-compat -any
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall -Wno-unused-imports

executable Status
    if flag(network-uri)
        build-depends:
            network-uri >=2.5 && <2.7,
            network >=2.5 && <3.2
    else
        build-depends:
            network <2.5
    main-is: Status.hs
    other-modules: Parse
    build-depends:
        base >=4.9 && <4.20,
        attoparsec >=0.10 && <0.15,
        bytestring >=0.10 && <0.13,
        deepseq -any,
        HTTP >=4000.2 && <4000.5,
        iproute >=1.5 && <1.8,
        MissingH <1.7,
        time >=1.4 && <1.13,
        time-locale-compat -any
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall -Wno-unused-imports

executable Stem
    if flag(network-uri)
        build-depends:
            network-uri >=2.5 && <2.7,
            network >=2.5 && <3.2
    else
        build-depends:
            network <2.5
    main-is: Stem.hs
    other-modules: Parse
    build-depends:
        base >=4.9 && <4.20,
        attoparsec >=0.10 && <0.15,
        bytestring >=0.10 && <0.13,
        containers >=0.1 && <0.7,
        deepseq -any,
        HTTP >=4000.2 && <4000.5,
        iproute >=1.5 && <1.8,
        MissingH <1.7,
        time >=1.4 && <1.13,
        time-locale-compat -any
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall -Wno-unused-imports

executable DownloadHours
    if flag(network-uri)
        build-depends:
            network-uri >=2.5 && <2.7,
            network >=2.5 && <3.2
    else
        build-depends:
            network <2.5
    main-is: DownloadHours.hs
    other-modules: Parse Histogram
    build-depends:
        base >=4.9 && <4.20,
        attoparsec >=0.10 && <0.15,
        bytestring >=0.10 && <0.13,
        containers >=0.1 && <0.7,
        deepseq -any,
        HTTP >=4000.2 && <4000.5,
        iproute >=1.5 && <1.8,
        MissingH <1.7,
        terminal-size,
        time >=1.4 && <1.13,
        time-locale-compat -any
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall -Wno-unused-imports

executable Benchmark
    if flag(network-uri)
        build-depends:
            network-uri >=2.5 && <2.7,
            network >=2.5 && <3.2
    else
        build-depends:
            network <2.5
    main-is: Benchmark.hs
    other-modules: Parse
    build-depends:
        base >=4.9 && <4.20,
        attoparsec >=0.10 && <0.15,
        bytestring >=0.10 && <0.13,
        containers >=0.1 && <0.7,
        criterion -any,
        deepseq -any,
        HTTP >=4000.2 && <4000.5,
        iproute >=1.5 && <1.8,
        MissingH <1.7,
        time >=1.4 && <1.13,
        time-locale-compat -any
    default-language: Haskell2010
    other-extensions: StandaloneDeriving
    ghc-options: -Wall -Wno-unused-imports -rtsopts
